crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__function__tests__function_kw_only_args_with_defaults.snap
---
source: crates/python_parser/src/parser/tests/function.rs
expression: parse_ast
---
(
    [
        FunctionDef(
            FunctionDefStmt {
                range: 0..29,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..23,
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [
                        ParameterWithDefault {
                            range: 9..10,
                            parameter: Parameter {
                                range: 9..10,
                                name: Identifier {
                                    id: "a",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 12..16,
                            parameter: Parameter {
                                range: 12..13,
                                name: Identifier {
                                    id: "b",
                                    range: 12..13,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 14..16,
                                        value: Int(
                                            20,
                                        ),
                                    },
                                ),
                            ),
                        },
                        ParameterWithDefault {
                            range: 18..22,
                            parameter: Parameter {
                                range: 18..19,
                                name: Identifier {
                                    id: "c",
                                    range: 18..19,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 20..22,
                                        value: Int(
                                            30,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    kwarg: None,
                },
                returns: None,
                body: [
                    Pass(
                        PassStmt {
                            range: 25..29,
                        },
                    ),
                ],
            },
        ),
    ],
    [],
)
