crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__function__tests__function_pos_and_kw_only_args_with_defaults_and_varargs.snap
---
source: crates/python_parser/src/parser/tests/function.rs
expression: parse_ast
---
(
    [
        FunctionDef(
            FunctionDefStmt {
                range: 0..42,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..36,
                    posonlyargs: [],
                    args: [
                        ParameterWithDefault {
                            range: 6..7,
                            parameter: Parameter {
                                range: 6..7,
                                name: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 9..10,
                            parameter: Parameter {
                                range: 9..10,
                                name: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 12..13,
                            parameter: Parameter {
                                range: 12..13,
                                name: Identifier {
                                    id: "c",
                                    range: 12..13,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                    ],
                    vararg: Some(
                        Parameter {
                            range: 16..20,
                            name: Identifier {
                                id: "args",
                                range: 16..20,
                            },
                            annotation: None,
                        },
                    ),
                    kwonlyargs: [
                        ParameterWithDefault {
                            range: 22..23,
                            parameter: Parameter {
                                range: 22..23,
                                name: Identifier {
                                    id: "d",
                                    range: 22..23,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 25..29,
                            parameter: Parameter {
                                range: 25..26,
                                name: Identifier {
                                    id: "e",
                                    range: 25..26,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 27..29,
                                        value: Int(
                                            20,
                                        ),
                                    },
                                ),
                            ),
                        },
                        ParameterWithDefault {
                            range: 31..35,
                            parameter: Parameter {
                                range: 31..32,
                                name: Identifier {
                                    id: "f",
                                    range: 31..32,
                                },
                                annotation: None,
                            },
                            default: Some(
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 33..35,
                                        value: Int(
                                            30,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    kwarg: None,
                },
                returns: None,
                body: [
                    Pass(
                        PassStmt {
                            range: 38..42,
                        },
                    ),
                ],
            },
        ),
    ],
    [],
)
